Adaptamos el proyecto con arrays

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <img class="logo" src="./assets/img/8deoro.jpg">
     </header>
     <main>
-        <h1>8 de oro</h1>
+        <h1>8 DE ORO: Tienda digital</h1>
+
+        <!-- Con el evento "onClick" llamamos a una función de un script -->
+        <button onclick="buy8deoro();">Comprar</button>
     </main>
     <footer>
         <p>Coderhouse 2022 - Curso de JS | by <a href="https://instagram.com/artifexted">Artifexted</a></p>
