Interactuamos con HTML

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <main>
         <h1>8 DE ORO: Tienda digital</h1>
 
-        <!-- Con el evento "onClick" llamamos a una función de un script -->
+        <div id="cards"></div>
+        <!-- Con el evento "onClick" llamamos a una función de JavaScript -->
         <button onclick="buy8deoro();">Comprar</button>
     </main>
     <footer>
