Prototipo de carrito

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1>8 DE ORO: Tienda digital</h1>
 
         <div id="cards"></div>
-        <!-- Con el evento "onClick" llamamos a una función de JavaScript -->
-        <button onclick="buy8deoro();">Comprar</button>
+        
+        <div id="cart"></div>
     </main>
     <footer>
         <p>Coderhouse 2022 - Curso de JS | by <a href="https://instagram.com/artifexted">Artifexted</a></p>
