Optimizacion de JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header id="header">
+    <header>
         <img class="logo" src="./assets/img/8deoro.jpg">
     </header>
     <main>
@@ -21,7 +21,7 @@
         <div id="cart"></div>
     </main>
     <footer>
-        <p>Coderhouse 2022 - Curso de JS | by <a href="https://instagram.com/artifexted">Artifexted</a></p>
+        <p>by <a href="https://instagram.com/artifexted">Artifexted</a></p>
     </footer>
 
     <script src="./assets/js/main.js"></script>
