Estilo basico en cards

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         </nav>
     </header>
     <main>
-        <h1>e-commerce</h1>
-        <p>¡Ahora el carrito podés verlo interactuando con la barra de navegación!</p>
+        <h1>¡Compra online!</h1>
 
         <div id="shop"></div>
 
