modificaciones en el estilo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="cart"></div>
     </main>
     <footer>
-        <p>by <a href="https://instagram.com/artifexted">Artifexted</a></p>
+        <p>by <a href="https://github.com/artifexted" class="byAtfx">Artifexted</a></p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastify-js/1.12.0/toastify.js" integrity="sha512-ZHzbWDQKpcZxIT9l5KhcnwQTidZFzwK/c7gpUUsFvGjEsxPusdUCyFxjjpc7e/Wj7vLhfMujNx7COwOmzbn+2w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
